--- a/content/resources/mar19_1.md
+++ b/content/resources/mar19_1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Study of EM waves in Periodic Structures
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-635-advanced-electromagnetism-spring-2003/6e61f3e62deeca98dfb079e96dd90b96_Mar19_1.pdf
 file_type: application/pdf
+parent_uid: 7075557d-b9d2-6a05-aa54-167c6ad07377
 resourcetype: Document
 title: Mar19_1.pdf
 uid: 6e61f3e6-2dee-ca98-dfb0-79e96dd90b96
